--- a/package.json
+++ b/package.json
@@ -4,15 +4,20 @@
 	"description": "This is a website for Ristorante Con Fusion",
 	"main": "index.html",
 	"scripts": {
-		"start": "npm run lite",
+		"start": "npm run watch:all",
 		"test": "echo \"Error: no test specified\" && exit 1",
 		"lite": "lite-server",
-		"scss": "sass --update --style=expanded css/styles.scss:css/styles.css"
+		"scss": "sass --update --style=expanded css/styles.scss:css/styles.css",
+		"watch:scss": "onchange 'css/*.scss' -- npm run scss",
+		"watch:all": "parallelshell 'npm run watch:scss' 'npm run lite'"
 	},
 	"author": "Italo Rissardi",
 	"license": "ISC",
 	"devDependencies": {
-		"lite-server": "^2.3.0"
+		"lite-server": "^2.3.0",
+		"onchange": "^3.3.0",
+		"parallelshell": "^3.0.2",
+		"sass": "^1.54.8"
 	},
 	"dependencies": {
 		"bootstrap": "^4.0.0",
@@ -20,6 +25,7 @@
 		"font-awesome": "^4.7.0",
 		"jquery": "^3.3.1",
 		"popper.js": "^1.12.9",
+		"request": "^2.88.2",
 		"sass": "^1.54.8"
 	}
 }
