--- a/package.json
+++ b/package.json
@@ -20,15 +20,20 @@
 	"license": "ISC",
 	"devDependencies": {
 		"cssmin": "^0.4.3",
+		"grunt": "^1.5.3",
+		"grunt-browser-sync": "^2.2.0",
+		"grunt-contrib-watch": "^1.1.0",
+		"grunt-dart-sass": "^2.0.1",
 		"htmlmin": "^0.0.7",
+		"jit-grunt": "^0.10.0",
 		"lite-server": "^2.3.0",
-		"onchange": "^3.3.0",
+		"onchange": "^7.1.0",
 		"parallelshell": "^3.0.2",
 		"rimraf": "^2.6.2",
 		"sass": "^1.54.8",
+		"time-grunt": "^1.4.0",
 		"uglifyjs": "^2.4.11",
-		"usemin-cli": "^0.5.1"
-		
+		"usemin-cli": "^0.0.7"
 	},
 	"dependencies": {
 		"bootstrap": "^4.0.0",
