--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
 	"author": "Italo Rissardi",
 	"license": "ISC",
 	"devDependencies": {
+		"browser-sync": "^2.27.10",
 		"cssmin": "^0.4.3",
 		"grunt": "^1.5.3",
 		"grunt-browser-sync": "^2.2.0",
@@ -33,16 +34,18 @@
 		"grunt-dart-sass": "^2.0.1",
 		"grunt-filerev": "^2.3.1",
 		"grunt-usemin": "^3.1.1",
+		"gulp": "^4.0.2",
+		"gulp-dart-sass": "^1.0.2",
 		"htmlmin": "^0.0.7",
 		"jit-grunt": "^0.10.0",
-		"lite-server": "^2.3.0",
+		"lite-server": "^2.6.1",
 		"onchange": "^7.1.0",
 		"parallelshell": "^3.0.2",
-		"rimraf": "^2.6.2",
+		"rimraf": "^3.0.2",
 		"sass": "^1.54.8",
 		"time-grunt": "^1.4.0",
 		"uglifyjs": "^2.4.11",
-		"usemin-cli": "^0.0.7"
+		"usemin-cli": "^0.6.0"
 	},
 	"dependencies": {
 		"bootstrap": "^4.0.0",
