--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
 		"gulp-clean-css": "^4.3.0",
 		"gulp-dart-sass": "^1.0.2",
 		"gulp-flatmap": "^1.0.2",
+		"gulp-gh-pages": "^0.5.4",
 		"gulp-htmlmin": "^5.0.1",
 		"gulp-imagemin": "^7.1.0",
 		"gulp-rev": "^9.0.0",
